--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
+    "express": "^4.21.1",
     "firebase": "^10.14.1",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "stripe": "^17.4.0",
     "tailwindcss": "^3.4.11",
     "web-vitals": "^2.1.4"
   },
