--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "stripe": "^17.4.0",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.11",
     "web-vitals": "^2.1.4"
   },
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
