--- a/functions/package.json
+++ b/functions/package.json
@@ -14,15 +14,14 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^13.0.1",
+    "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.1",
     "stripe": "^17.4.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "eslint-config-google": "^0.14.0"
   },
   "private": true
 }
